maze.lessons.maze.pledge.PledgeMaze.scala.error
Escaper:22: error: not found: value somAng
  gauche();somAng+=1
           ^Escaper:25: error: not found: value somAng
    droite();somAng=somAng-1
             ^Escaper:28: error: not found: value somAng
      droite();somAng=somAng-1
               ^